--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
+    "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "expo": "~51.0.21",
@@ -33,6 +35,7 @@
     "react-native-responsive-grid-system": "^1.0.4",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
